tests/class_method_default_parameters/class_method_default_parameters.exp
Error ------------------------------------------------------------------------- class_method_default_parameters.js:17:19

string [1] is incompatible with number [2]. [incompatible-type]

   class_method_default_parameters.js:17:19
   17|     h(i: number = this.b) { // error
                         ^^^^^^

References:
   class_method_default_parameters.js:3:8
    3|     b: string;
              ^^^^^^ [1]
   class_method_default_parameters.js:17:10
   17|     h(i: number = this.b) { // error
                ^^^^^^ [2]



Found 1 error
